# crux-vault

./: LICENSE  README.md  examples.py  pyproject.toml  requirements.txt
cruxvault/: __init__.py  __main__.py  cli.py  config.py  models.py
cruxvault/audit/: logger.py
cruxvault/crypto/: utils.py
cruxvault/storage/: base.py  local.py  models.py
cruxvault/utils/: console.py  utils.py
docs/: CLI.md  COLLAB.md  GIT_LIKE.md  GUI.md  INSTALLATION.md  PYTHON_API.md  SECURITY.md  TEST.md
frontend/: simple_ui.py
tests/: test_cli.py  test_encrypt.py  test_storage.py
unified/: __init__.py  __main__.py  cli.py  config.py  models.py
unified/crypto/: encryption.py  utils.py
unified/storage/: base.py  local.py  models.py
